--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
         "clsx": "^2.1.1",
         "date-fns": "^3.6.0",
         "framer-motion": "^11.3.30",
+        "laravel-echo": "^1.16.1",
         "lucide-react": "^0.436.0",
+        "pusher-js": "^8.4.0-rc2",
         "react-apexcharts": "^1.4.1",
         "react-google-charts": "^4.0.1",
         "react-hook-form": "^7.53.0",
