--- a/.env
+++ b/.env
@@ -59,3 +59,15 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+
+
+BROADCAST_DRIVER=pusher
+
+PUSHER_APP_ID=1869452
+PUSHER_APP_KEY=d94f80dae0d44fc99f33
+PUSHER_APP_SECRET=0da70295ea07af198be6
+PUSHER_APP_CLUSTER=ap2
+
+PUSHER_HOST=
+PUSHER_PORT=443
+PUSHER_SCHEME=https
