--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
-APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
+# APP_MAINTENANCE_DRIVER=file
+APP_MAINTENANCE_STORE=database
 
 BCRYPT_ROUNDS=12
 
@@ -34,7 +34,9 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+# QUEUE_CONNECTION=database
+QUEUE_CONNECTION=sync
+
 CACHE_STORE=database
 CACHE_PREFIX=
 MEMCACHED_HOST=127.0.0.1
@@ -60,14 +62,21 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 
-
+BROADCAST_CONNECTION=pusher
 BROADCAST_DRIVER=pusher
 
-PUSHER_APP_ID=1869452
-PUSHER_APP_KEY=d94f80dae0d44fc99f33
-PUSHER_APP_SECRET=0da70295ea07af198be6
-PUSHER_APP_CLUSTER=ap2
+PUSHER_APP_ID="1873927"
+PUSHER_APP_KEY="5e6f9997702a26b4dd98"
+PUSHER_APP_SECRET="2f2778a76285adfbc2b3"
+PUSHER_APP_CLUSTER="ap2"
 
 PUSHER_HOST=
-PUSHER_PORT=443
-PUSHER_SCHEME=https
+PUSHER_PORT="443"
+PUSHER_SCHEME="https"
+
+VITE_APP_NAME="${APP_NAME}"
+VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_PUSHER_HOST="${PUSHER_HOST}"
+VITE_PUSHER_PORT="${PUSHER_PORT}"
+VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
