Add production build scripts to package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "prebuild": "npm run prod",
+        "prod": "vite build --mode=production"
     },
     "devDependencies": {
         "@headlessui/react": "^2.0.0",
